--- a/index.html
+++ b/index.html
@@ -1,6 +1,72 @@
+<!DOCTYPE html>
+
 <html>
+	<head>
+		<title>Flor y Canto Joyeria</title>
+		<link type="text/css" rel="stylesheet"href="css/960_12_col.css" />
 
-<title>index</title>
+		<style>
+			* {
+				font-family: Arial, Verdana, sans-serif;
+				color: #665544;
+				text-align: center;}
 
+			#nav, #feature, .article, #footer {
+				background-color: #efefef;
+				margin-top: 20px;
+				padding: 10px 0px 5px 0px;}
 
+			#feature, .article {
+				height: 100px;}
+
+			li {
+				display: inline;
+				padding: 5px;}
+
+		</style>
+	</head>
+
+	<body>
+		<div class="container_12 clearfix">
+			<div id="header" class="grid_12">
+				<h1>Flor y Canto Joyeria</h1>
+                <img src="http://i98.photobucket.com/albums/l273/Pompovaz/florycanto_zps017d7eb8.png"/>
+				<div id="nav">
+					<ul>
+						<li><a href=""> Inicio</a></li>
+						<li><a href=""> Agregar</a></li>
+						<li><a href=""> Mis Eventos</a></li>
+						<li><a href=""> Autorizar</a></li>
+						<li><a href=""> Ajustes</a></li>
+					</ul>
+				</div>
+			</div>
+			<div id="feature" class="grid_12">
+				<h1><p> Colecciones </p></h1>
+			</div>
+			<a href=""><div class="article grid_4">
+				<h4><p>Palma</p></h4>
+				<img src="http://florycantojoyeria.weebly.com/uploads/4/2/0/9/4209666/_8043380.png" alt="Event" />
+				<p><b>Fecha:</b> 21/Abril/2014 <br> <b>Lugar:</b> Crater Azul <br></p>
+
+			</div></a>
+
+			<div class="article grid_4">
+				<h4><p>Congreso XY</p></h4>
+				<img src="images/congreso.png" alt="Event" />
+				<p><b>Fecha:</b> 23/Mayo/2014 <br> <b>Lugar:</b> Auditorio biblioteca<br></p>
+			</div>
+
+			<div class="article grid_4">
+				<h4><p>Reclutamiento Microsoft</p></h4>
+				<img src="images/microsoft.png" alt="Event" />
+				<p><b>Fecha:</b> 3/Junio/2014 <br> <b>Lugar:</b> Salon 1202 <br></p>
+			</div>
+
+			<div id="footer" class="grid_12">
+				<p>&copy; Copyright 2014. Algunos derechos reservados, Flor y Canto Joyeria 2014</p>
+			</div>
+		</div> <!-- .container_12 -->
+
+	</body>
 </html>
